# Elastic-Skinning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: shader_build.cmake
Elastic Skinning/: CMakeLists.txt
Elastic Skinning/include/: animation.h  asset.h  computepipeline.h  crc.h  elasticfieldcomposer.h  elasticskinning.h  gfxcontext.h  gfxpipeline.h  mesh.h  model.h  renderer.h  renderingtypes.h  skeleton.h  swapchain.h  swapchaincontext.h  util.h  window.h
Elastic Skinning/shaders/: base.frag  base.vert  baseskel.vert  common.glsl  elastic.comp  elasticfieldblend.comp  elasticfieldtx.comp  elasticmeshtx.comp
Elastic Skinning/source/: animation.cpp  asset.cpp  computepipeline.cpp  deps_impl.cpp  elasticfieldcomposer.cpp  elasticskinning.cpp  gfxcontext.cpp  gfxpipeline.cpp  main.cpp  renderer.cpp  skeleton.cpp  swapchain.cpp  swapchaincontext.cpp  window.cpp
